--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "galio-framework": "^0.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "^0.69.0",
+    "react-native": "0.68.2",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
